[add] basic style

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       crossorigin="anonymous"
     />
 
+    <!-- SCSS -->
+    <link rel="stylesheet" href="./style.scss" />
+
     <title>PHP Badwords</title>
   </head>
   <body>
