[fix] grammal error

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="text-center my-5">PHP Badwords Form</h1>
+      <h1 class="text-center my-5 text-primary">PHP Badwords Form</h1>
 
       <form method="post" action="form_output.php">
         <div class="mb-3">
